--- a/CornerDetection/Corner Detection.ipynb
+++ b/CornerDetection/Corner Detection.ipynb
@@ -62,11 +62,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Erosion Vs Dilation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "coins_img = cv2.imread('coins.png',0)\n",
+    "kernel = np.ones((5,5), np.uint8)\n",
+    "coins_erosion = cv2.erode(coins_img, kernel, iterations=3)\n",
+    "coins_dilation = cv2.dilate(coins_img, kernel, iterations=3)\n",
+    "cv2_imshow(coins_img)"
+   ]
   }
  ],
  "metadata": {
